--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,14 @@ server.port=8081
 # =             CONFIGURACIÓN DE LA BASE DE DATOS (AZURE)       =
 # ===============================================================
 
-# URL de conexión a Azure MySQL
-# Nota: Puerto 3306 y parámetros SSL son obligatorios para Azure.
-spring.datasource.url=jdbc:mysql://mi-proyecto-educativo.mysql.database.azure.com:3306/fundaciondeportiva?useSSL=true&requireSSL=true&serverTimezone=UTC
+# Usamos la variable de entorno DB_URL definida en Azure
+spring.datasource.url=${DB_URL}
 
-# Usuario y contraseña de Azure
-spring.datasource.username=administradordb
-spring.datasource.password=admindb_12
+# Usamos la variable de entorno DB_USERNAME
+spring.datasource.username=${DB_USERNAME}
+
+# Usamos la variable de entorno DB_PASSWORD
+spring.datasource.password=${DB_PASSWORD}
 
 # Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,17 +21,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # =                 CONFIGURACIÓN DE HIBERNATE (JPA)            =
 # ===============================================================
 
-# Mantiene las tablas actualizadas. Si la BD está vacía en Azure, las creará ahora.
 spring.jpa.hibernate.ddl-auto=update
-
-# Para ver las consultas SQL en consola (útil para verificar que conecta)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# Opcional: Especificar dialecto para evitar warnings
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # ===============================================================
 # =                 SEGURIDAD (JWT)                             =
 # ===============================================================
-jwt.secret=RnVuZGFjaW9uRGVwb3J0aXZhd2l0aEF1dG9ub21hRGVsUGVydQ==
+
+# Usamos la variable JWT_SECRET (Observé que la tienes definida en Azure)
+# Nota: En tu captura tienes "JWT_SECRET" y "jwt.secret".
+# Spring Boot prefiere las mayúsculas para variables de SO, así que usaremos esa.
+jwt.secret=${JWT_SECRET}
