Update application.properties with Azure settings
Added Azure storage credentials and file upload configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,12 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Nota: En tu captura tienes "JWT_SECRET" y "jwt.secret".
 # Spring Boot prefiere las mayúsculas para variables de SO, así que usaremos esa.
 jwt.secret=${JWT_SECRET}
+
+
+# Credenciales de Azure
+azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
+azure.storage.container-name=${BLOB_CONTAINER}
+
+# Configuración para permitir subida de archivos grandes (opcional pero recomendado)
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
