--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # =                 SEGURIDAD (JWT)                             =
 # ===============================================================
 
-# Usamos la variable JWT_SECRET (Observé que la tienes definida en Azure)
-# Nota: En tu captura tienes "JWT_SECRET" y "jwt.secret".
-# Spring Boot prefiere las mayúsculas para variables de SO, así que usaremos esa.
+# Usamos la variable JWT_SECRET 
 jwt.secret=${JWT_SECRET}
 
 
