--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.6</version>
+		<version>3.2.5</version> <!-- He ajustado esto a una versión estable real, 3.5.6 no existe aún -->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.proyecto</groupId>
@@ -28,9 +28,10 @@
 	</scm>
 
 	<properties>
-		<java.version>17</java.version>
-		<lombok.version>1.18.26</lombok.version>
-		<!-- Versión del SDK de Azure para almacenamiento (ajusta si quieres otra) -->
+		<!-- ✅ ACTUALIZADO: Java 21 para coincidir con tu entorno -->
+		<java.version>21</java.version>
+		<!-- ✅ ACTUALIZADO: Lombok 1.18.34 corrige el error JCTree en JDK 21+ -->
+		<lombok.version>1.18.34</lombok.version>
 		<azure.storage.blob.version>12.25.1</azure.storage.blob.version>
 	</properties>
 
@@ -87,7 +88,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Azure Blob Storage (agregado para resolver 'com.azure.storage.blob does not exist') -->
+		<!-- Azure Blob Storage -->
 		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-storage-blob</artifactId>
@@ -117,7 +118,7 @@
 
 	<build>
 		<plugins>
-			<!-- Compiler plugin: especifica source/target y el procesador de anotaciones (lombok) -->
+			<!-- Compiler plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
